--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,7 +85,7 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: |
-        chmod +x setenv \
+        chmod +x setenv; \
         ./setenv conf/backend/hee-dev
 
     # Checks that all Terraform configuration files adhere to a canonical format
