--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -95,10 +95,19 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: |
-        cd root; terraform plan -var-file=../conf/hee/hee-dev.tfvars; echo ${{ github.ref }}; echo ${{ github.event_name}}
+        cd root; \
+        terraform plan -var-file=../conf/hee/hee-dev.tfvars
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: ./apply.sh hee-dev
+      run: |
+        chmod +x apply.sh; \
+        ./apply.sh hee-dev
+
+    - name: Terraform destroy
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      run: |
+        chmod +x destroy.sh; \
+        ./destroy.sh hee-dev
