--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,7 +54,7 @@ permissions:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Infra Create'
     runs-on: ubuntu-latest
     environment: production
 
@@ -67,12 +67,6 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
-
-    # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    # - name: Setup Terraform
-    #   uses: hashicorp/setup-terraform@v1
-    #   with:
-    #     cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
     
     # AWS 리소스를 이용하기 위해서 추가
     - name: Configure AWS credentials
@@ -106,6 +100,19 @@ jobs:
         chmod +x apply.sh; \
         ./apply.sh hee-dev
 
+jobs:
+  terraform:
+    name: 'Infra Delete'
+    runs-on: ubuntu-latest
+    environment: production
+
+    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+    # Checkout the repository to the GitHub Actions runner
     - name: Terraform destroy
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
