--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -104,7 +104,7 @@ jobs:
   terraform:
     name: 'Infra Delete'
     runs-on: ubuntu-latest
-    environment: production
+    environment: delete
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
