--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -53,7 +53,7 @@ permissions:
   contents: read
 
 jobs:
-  terraform:
+  infra-create:
     name: 'Infra Create'
     runs-on: ubuntu-latest
     environment: production
@@ -100,7 +100,7 @@ jobs:
         chmod +x apply.sh; \
         ./apply.sh hee-dev
 
-  terraform123:
+  infra-delete:
     name: 'Infra Delete'
     runs-on: ubuntu-latest
     environment: delete
@@ -112,6 +112,27 @@ jobs:
 
     steps:
     # Checkout the repository to the GitHub Actions runner
+    - name: Checkout
+      uses: actions/checkout@v3
+    
+    # AWS 리소스를 이용하기 위해서 추가
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+        
+    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+    - name: Terraform Init
+      run: |
+        chmod +x setenv; \
+        source ./setenv conf/backend/hee-dev
+
+    # Checks that all Terraform configuration files adhere to a canonical format
+    - name: Terraform Format
+      run: terraform fmt -check
+
     - name: Terraform destroy
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: |
