--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -222,7 +222,8 @@ jobs:
       run: |
         cd security-group; \
         chmod +x setenv; \
-        source ./setenv conf/backend/hee-dev
+        source ./setenv conf/backend/hee-dev; \
+        cat ./root/backend.tf
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
